--- a/web_flask/templates/surveys/surveys_list.html
+++ b/web_flask/templates/surveys/surveys_list.html
@@ -16,7 +16,7 @@
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../static/styles/login.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
+	<link rel="stylesheet" type="text/css" href="../static/styles/footer_relatif.css">
 
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
