Fix login/logout button placement

--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -1,4 +1,4 @@
-<div class="shadow-sm p-3 mb-5 bg-white rounded">
+<div class="shadow-sm mb-5 bg-white rounded">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="http://0.0.0.0:5000/">
 			<img src="../../static/images/SurveyStorm_logo.png" width="30" height="30" class="d-inline-block align-top"
@@ -50,10 +50,7 @@
 			</ul>
 		</div>
 
-
-<div class="form-group">
-	<input class="btn btn-primary mr-2" type="button" value="Logout" name="btn_logout" id="btn_logout">
-	<input class="btn btn-info" type="button" value="Login" name="btn_login" id="btn_login">
-</div>
+    <input class="btn btn-primary mr-2" type="button" value="Logout" name="btn_logout" id="btn_logout">
+    <input class="btn btn-info" type="button" value="Login" name="btn_login" id="btn_login">
 </nav>
 </div>
