--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -39,6 +39,17 @@
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+							Categories
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="http://0.0.0.0:5000/categories_list">List Categories</a>
+							<a class="dropdown-item" href="http://0.0.0.0:5000/category_create">Create Category</a>
+						</div>
+					</li>
+
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 							Users
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
