--- a/web_flask/templates/surveys/surveys_list.html
+++ b/web_flask/templates/surveys/surveys_list.html
@@ -15,13 +15,11 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/login.css">
 	<link rel="stylesheet" type="text/css" href="../static/styles/footer_relatif.css">
 
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
 	<script type="text/javascript" src="../static/scripts/survey_list.js"></script>
-	<script type="text/javascript" src="../static/scripts/event/survey_delete.js"></script>
 
 	<link rel="icon" href="../templates/shared/images/SurveyStorm_icon.png" />
 
@@ -34,8 +32,15 @@
 	{{ render_partial('shared/_header.html') }}
 	<div class='container-sm'>
 	<H1>Surveys</H1>
-	<div class="row justify-content-right">
+	<div class="row justify-content-lg-start">
 		<section class="alert_success_delete_survey"></section>
+	</div>
+	<div class="container-fluid">
+		<div class="btn_link_to_create_survey">
+			<div class="row justify-content-lg-end">
+				<input class="btn btn-success btn-lg" type="button" value="Create Survey" onclick="window.location.href = 'http://0.0.0.0:5000/survey_create';">
+			</div>
+		</div>
 	</div>
 	<h4>&nbsp;</h4>
 
