--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -32,8 +32,16 @@
 						</div>
 					</li>
 
-					<li class="nav-item active">
-						<a class="nav-link" href="#">Questions</a>
+
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+							Questions
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="http://0.0.0.0:5000/questions_list">List Questions</a>
+							<a class="dropdown-item" href="http://0.0.0.0:5000/question_create">Create Question</a>
+						</div>
 					</li>
 
 					<li class="nav-item dropdown active">
