add user list template

--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -61,7 +61,7 @@
 							Users
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="http://0.0.0.0:5000/user_list">List Users</a>
+							<a class="dropdown-item" href="http://0.0.0.0:5000/users_list">List Users</a>
 							<a class="dropdown-item" href="http://0.0.0.0:5000/user_create">Create User</a>
 						</div>
 					</li>
