--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -1,6 +1,6 @@
 
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
+<footer class="page-footer font-small blue pt-4 fixed-bottom">
 
 	<!-- Footer Links -->
 	<div class="container-fluid text-center text-md-left">
