--- a/web_flask/templates/surveys/surveys_list.html
+++ b/web_flask/templates/surveys/surveys_list.html
@@ -1,81 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Survey Storm</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
-<head>
-	<title>Survey Storm</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    {% assets "styles_all" %}
+      <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+    {% endassets %}
 
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    {% assets "js_all" %}
+      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/footer_relatif.css">
+    <link rel="icon" href="/favicon.ico" />
+  </head>
 
-	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
-	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
-	<script type="text/javascript" src="../static/scripts/survey_list.js"></script>
+  <body>
+    
+    {{ render_partial('shared/_header.html') }}
+    <div class='container-sm'>
+    <H1>Surveys</H1>
+    <div class="row justify-content-lg-start">
+      <section class="alert_success_delete_survey"></section>
+    </div>
+    <div class="container-fluid">
+      <div class="btn_link_to_create_survey">
+        <div class="row justify-content-lg-end">
+          <input class="btn btn-success btn-lg" type="button" value="Create Survey" onclick="window.location.href = 'http://0.0.0.0:5000/survey_create';">
+        </div>
+      </div>
+    </div>
+    <h4>&nbsp;</h4>
 
-	<link rel="icon" href="../templates/shared/images/SurveyStorm_icon.png" />
-
-
-
-</head>
-
-<body>
-	
-	{{ render_partial('shared/_header.html') }}
-	<div class='container-sm'>
-	<H1>Surveys</H1>
-	<div class="row justify-content-lg-start">
-		<section class="alert_success_delete_survey"></section>
-	</div>
-	<div class="container-fluid">
-		<div class="btn_link_to_create_survey">
-			<div class="row justify-content-lg-end">
-				<input class="btn btn-success btn-lg" type="button" value="Create Survey" onclick="window.location.href = 'http://0.0.0.0:5000/survey_create';">
-			</div>
-		</div>
-	</div>
-	<h4>&nbsp;</h4>
-
-		<table class="table table-hover table-dark">
-			<thead>
-				<tr>
-					<th scope="col">#</th>
-					<th scope="col">Survey's Name</th>
-					<th scope="col">Survey's Id</th>
-					<th scope="col"></th>
-					<th scope="col">Watch Update Delete</th>
-				</tr>
-			</thead>
-			<tbody class="surveys_list">
-			</tbody>
-		</table>
-	</div>
-	<h4>&nbsp;</h4>
-	<div class='container-md'>
-	<nav aria-label="Page navigation example">
-		<ul class="pagination justify-content-end">
-			<li class="page-item disabled">
-				<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-			</li>
-			<li class="page-item"><a class="page-link" href="#">1</a></li>
-			<li class="page-item"><a class="page-link" href="#">2</a></li>
-			<li class="page-item"><a class="page-link" href="#">3</a></li>
-			<li class="page-item">
-				<a class="page-link" href="#">Next</a>
-			</li>
-		</ul>
-	</nav>
-	</div>
-	<h1>&nbsp;</h1>
-	{{ render_partial('shared/_footer.html') }}
-</body>
-
+      <table class="table table-hover table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Survey's Name</th>
+            <th scope="col">Survey's Id</th>
+            <th scope="col"></th>
+            <th scope="col">Watch Update Delete</th>
+          </tr>
+        </thead>
+        <tbody class="surveys_list">
+        </tbody>
+      </table>
+    </div>
+    <h4>&nbsp;</h4>
+    <div class='container-md'>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-end">
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <h1>&nbsp;</h1>
+    {{ render_partial('shared/_footer.html') }}
+  </body>
 </html>
