Remove all absolute path by relative path Fix container by container-fluid Add web container

--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -76,7 +76,7 @@
 
 	<!-- Copyright -->
 	<div class="footer-copyright text-center py-3">© 2020 Copyright:
-	  <a href="http://0.0.0.0:5000/">Survey Storm</a>
+	  <a href="/">Survey Storm</a>
 	</div>
 	<!-- Copyright -->
   
