--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -1,6 +1,6 @@
 <div class="shadow-sm mb-5 bg-white rounded">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="navbar-brand" href="http://0.0.0.0:5000/">
+		<a class="navbar-brand" href="/">
 			<img src="../../static/images/SurveyStorm_logo.png" width="30" height="30" class="d-inline-block align-top"
 				alt="" loading="lazy">urvey Storm</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -16,8 +16,8 @@
 							Profiles
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="http://0.0.0.0:5000/profiles_list">List Profiles</a>
-							<a class="dropdown-item" href="http://0.0.0.0:5000/profile_create">Create Profile</a>
+							<a class="dropdown-item" href="/profiles">List Profiles</a>
+							<a class="dropdown-item" href="/profile/create">Create Profile</a>
 						</div>
 					</li>
 
@@ -27,8 +27,8 @@
 							Surveys
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="http://0.0.0.0:5000/surveys_list">List Surveys</a>
-							<a class="dropdown-item" href="http://0.0.0.0:5000/survey_create">Create Survey</a>
+							<a class="dropdown-item" href="/surveys">List Surveys</a>
+							<a class="dropdown-item" href="/surveys/create">Create Survey</a>
 						</div>
 					</li>
 
@@ -39,8 +39,8 @@
 							Questions
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="http://0.0.0.0:5000/questions_list">List Questions</a>
-							<a class="dropdown-item" href="http://0.0.0.0:5000/question_create">Create Question</a>
+							<a class="dropdown-item" href="/questions">List Questions</a>
+							<a class="dropdown-item" href="/question/create">Create Question</a>
 						</div>
 					</li>
 
@@ -50,8 +50,8 @@
 							Categories
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="http://0.0.0.0:5000/categories_list">List Categories</a>
-							<a class="dropdown-item" href="http://0.0.0.0:5000/category_create">Create Category</a>
+							<a class="dropdown-item" href="/categories">List Categories</a>
+							<a class="dropdown-item" href="/category/create">Create Category</a>
 						</div>
 					</li>
 
@@ -61,8 +61,8 @@
 							Users
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" href="http://0.0.0.0:5000/users_list">List Users</a>
-							<a class="dropdown-item" href="http://0.0.0.0:5000/user_create">Create User</a>
+							<a class="dropdown-item" href="/users">List Users</a>
+							<a class="dropdown-item" href="/user/create">Create User</a>
 						</div>
 					</li>
 				</ul>
