--- a/web_flask/templates/surveys/survey_create.html
+++ b/web_flask/templates/surveys/survey_create.html
@@ -27,7 +27,7 @@
 
   <body>
     {{ render_partial('shared/_header.html') }}
-    <div class='container-sm'>
+    <div class='container-fluid'>
 
       <h1>Create Survey</h1>
       <h1>&nbsp;</h1>
