--- a/web_flask/templates/users/users_list.html
+++ b/web_flask/templates/users/users_list.html
@@ -38,7 +38,7 @@
 	<div class="container-fluid">
 		<div class="btn_link_to_create_user">
 			<div class="row justify-content-lg-end">
-				<input class="btn btn-success btn-lg" type="button" value="Create user" onclick="window.location.href = 'http://0.0.0.0:5000/user_create';">
+				<input class="btn btn-success btn-lg" type="button" value="Create user" onclick="window.location.href = '/user_create';">
 			</div>
 		</div>
 	</div>
