--- a/web_flask/templates/profiles/profiles_list.html
+++ b/web_flask/templates/profiles/profiles_list.html
@@ -1,72 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<title>Survey Storm</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <title>Survey Storm</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
+    {% assets "styles_all" %}
+    <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+    {% endassets %}
 
+    {% assets "js_all" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
 
+    <link rel="icon" href="/favicon.ico" />
+  </head>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <body>
+    {{ render_partial('shared/_header.html') }}
 
-	<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-		crossorigin="anonymous"></script> -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <div class="container-fluid">
+      <section class="infos"></section>
 
-	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/login.css">
+      <div class="d-flex justify-content-center">
 
+        <table class="table table-hover table-dark">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Last name </th>
+              <th scope="col">First name</th>
+              <th scope="col">Watch Update Delete</th>
+            </tr>
+          </thead>
+          <tbody class="profiles_list">
 
-	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
-	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
-	<script type="text/javascript" src="../static/scripts/profile_list.js"></script>
-</head>
+          </tbody>
+        </table>
 
-<body>
-	{{ render_partial('shared/_header.html') }}
-
-	<section class="infos"></section>
-
-	<div class="d-flex justify-content-center">
-
-		<table class="table table-hover table-dark">
-			<thead>
-				<tr>
-					<th scope="col">#</th>
-					<th scope="col">Last name </th>
-					<th scope="col">First name</th>
-					<th scope="col">Watch Update Delete</th>
-				</tr>
-			</thead>
-			<tbody class="profiles_list">
-				
-			</tbody>
-		</table>
-
-	</div>
-	<nav aria-label="Page navigation example">
-		<ul class="pagination justify-content-end">
-			<li class="page-item disabled">
-				<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-			</li>
-			<li class="page-item"><a class="page-link" href="#">1</a></li>
-			<li class="page-item"><a class="page-link" href="#">2</a></li>
-			<li class="page-item"><a class="page-link" href="#">3</a></li>
-			<li class="page-item">
-				<a class="page-link" href="#">Next</a>
-			</li>
-		</ul>
-	</nav>
-	{{ render_partial('shared/_footer.html') }}
-</body>
+      </div>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-end">
+          <li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+      {{ render_partial('shared/_footer.html') }}
+    </div>
+  </body>
 
 </html>
