--- a/web_flask/templates/surveys/survey_edit.html
+++ b/web_flask/templates/surveys/survey_edit.html
@@ -15,11 +15,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
     {% assets "styles_all" %}
-      <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+    <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
     {% endassets %}
 
     {% assets "js_all" %}
-      <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
     {% endassets %}
 
     <link rel="icon" href="/favicon.ico" />
@@ -27,9 +27,12 @@
 
   <body>
     {{ render_partial('shared/_header.html') }}
-    
-    <h1>Edit specific survey page</h1>
+
+    <div class="container-fluid">
+      <h1>Edit specific survey page</h1>
+    </div>
 
     {{ render_partial('shared/_footer.html') }}
   </body>
+
 </html>
