finish cleaning code

--- a/web_flask/templates/categories/categories_list.html
+++ b/web_flask/templates/categories/categories_list.html
@@ -38,7 +38,7 @@
         <div class="btn_link_to_create_category">
           <div class="row justify-content-lg-end">
             <input class="btn btn-success btn-lg" type="button" value="Create Category"
-              onclick="window.location.href = '/category_create';">
+              onclick="window.location.href = '/categories/create';">
           </div>
         </div>
       </div>
