--- a/web_flask/templates/questions/questions_list.html
+++ b/web_flask/templates/questions/questions_list.html
@@ -35,7 +35,7 @@
         <div class="btn_link_to_create_question">
           <div class="row justify-content-lg-end">
             <input class="btn btn-success btn-lg" type="button" value="Create Question"
-              onclick="window.location.href = '/question_create';">
+              onclick="window.location.href = '/questions/create';">
           </div>
         </div>
       </div>
