--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -17,7 +17,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="/profiles">List Profiles</a>
-							<a class="dropdown-item" href="/profile/create">Create Profile</a>
+							<a class="dropdown-item" href="/profiles/create">Create Profile</a>
 						</div>
 					</li>
 
@@ -40,7 +40,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="/questions">List Questions</a>
-							<a class="dropdown-item" href="/question/create">Create Question</a>
+							<a class="dropdown-item" href="/questions/create">Create Question</a>
 						</div>
 					</li>
 
@@ -51,7 +51,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="/categories">List Categories</a>
-							<a class="dropdown-item" href="/category/create">Create Category</a>
+							<a class="dropdown-item" href="/categories/create">Create Category</a>
 						</div>
 					</li>
 
@@ -62,7 +62,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" href="/users">List Users</a>
-							<a class="dropdown-item" href="/user/create">Create User</a>
+							<a class="dropdown-item" href="/users/create">Create User</a>
 						</div>
 					</li>
 				</ul>
