--- a/web_flask/templates/users/users_list.html
+++ b/web_flask/templates/users/users_list.html
@@ -5,9 +5,7 @@
 	<title>Survey Storm</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
 		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
 		crossorigin="anonymous"></script>
@@ -15,34 +13,35 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../static/styles/footer_relatif.css">
 
-	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
-	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
-	<script type="text/javascript" src="../static/scripts/users_list.js"></script>
+	{% assets "styles_all" %}
+	<link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+	{% endassets %}
 
-	<link rel="icon" href="../templates/shared/images/SurveyStorm_icon.png" />
+	{% assets "js_all" %}
+	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
+	{% endassets %}
 
-
-
+	<link rel="icon" href="/favicon.ico" />
 </head>
 
 <body>
-	
+
 	{{ render_partial('shared/_header.html') }}
 	<div class='container-sm'>
-	<H1>Users</H1>
-	<div class="row justify-content-lg-start">
-		<section class="alert_success_delete_user"></section>
-	</div>
-	<div class="container-fluid">
-		<div class="btn_link_to_create_user">
-			<div class="row justify-content-lg-end">
-				<input class="btn btn-success btn-lg" type="button" value="Create user" onclick="window.location.href = '/user_create';">
+		<H1>Users</H1>
+		<div class="row justify-content-lg-start">
+			<section class="alert_success_delete_user"></section>
+		</div>
+		<div class="container-fluid">
+			<div class="btn_link_to_create_user">
+				<div class="row justify-content-lg-end">
+					<input class="btn btn-success btn-lg" type="button" value="Create user"
+						onclick="window.location.href = '/users/create';">
+				</div>
 			</div>
 		</div>
-	</div>
-	<h4>&nbsp;</h4>
+		<h4>&nbsp;</h4>
 
 		<table class="table table-hover table-dark">
 			<thead>
@@ -60,19 +59,19 @@
 	</div>
 	<h4>&nbsp;</h4>
 	<div class='container-md'>
-	<nav aria-label="Page navigation example">
-		<ul class="pagination justify-content-end">
-			<li class="page-item disabled">
-				<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-			</li>
-			<li class="page-item"><a class="page-link" href="#">1</a></li>
-			<li class="page-item"><a class="page-link" href="#">2</a></li>
-			<li class="page-item"><a class="page-link" href="#">3</a></li>
-			<li class="page-item">
-				<a class="page-link" href="#">Next</a>
-			</li>
-		</ul>
-	</nav>
+		<nav aria-label="Page navigation example">
+			<ul class="pagination justify-content-end">
+				<li class="page-item disabled">
+					<a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+				</li>
+				<li class="page-item"><a class="page-link" href="#">1</a></li>
+				<li class="page-item"><a class="page-link" href="#">2</a></li>
+				<li class="page-item"><a class="page-link" href="#">3</a></li>
+				<li class="page-item">
+					<a class="page-link" href="#">Next</a>
+				</li>
+			</ul>
+		</nav>
 	</div>
 	<h1>&nbsp;</h1>
 	{{ render_partial('shared/_footer.html') }}
