--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -12,7 +12,7 @@
 		<div class="col-md-6 mt-md-0 mt-3">
   
 		  <!-- Content -->
-		  <h5 class="text-uppercase">Footer Content</h5>
+		  <h5 class="text-uppercase"><img id="logo" src="/logo.png" />urvey Storm</h5>
 		  <p>Here you can use rows and columns to organize your footer content.</p>
   
 		</div>
