--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -1,7 +1,7 @@
 <div class="shadow-sm mb-5 bg-white rounded">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/">
-			<img src="../../static/images/SurveyStorm_logo.png" width="30" height="30" class="d-inline-block align-top"
+			<img src="/logo.png" width="30" height="30" class="d-inline-block align-top"
 				alt="" loading="lazy">urvey Storm</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
 			aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
