--- a/web_flask/templates/homepage.html
+++ b/web_flask/templates/homepage.html
@@ -22,7 +22,7 @@
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
 
-	<link rel="icon" type="image/png" href="../static/images/SurveyStorm_icon.png" />
+  <link rel="icon" href="/favicon.ico" />
 
 </head>
 
