--- a/web_flask/templates/sign_up.html
+++ b/web_flask/templates/sign_up.html
@@ -9,6 +9,8 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../static/scripts/signup.js"></script>
 	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
+
+  <link rel="icon" href="/favicon.ico" />
 </head>
 
 <body>
