--- a/web_flask/templates/dashboard.html
+++ b/web_flask/templates/dashboard.html
@@ -27,8 +27,8 @@
 	<script type="text/javascript" src="../static/scripts/get_user_profile.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
-	
 
+  <link rel="icon" href="/favicon.ico" />
 </head>
 
 <body>
