--- a/web_flask/static/styles/footer.css
+++ b/web_flask/static/styles/footer.css
@@ -1,3 +1,12 @@
+footer {
+	background-color: #f8f9fa;     
+	border-top: 1px solid #e9ecef;
+	display: flex; 
+	flex-direction: column; 
+	justify-content: center; 
+	align-items: center;
+}
+
 body > footer h5 > img#logo {
 	width: 100px;
 }
