Fix footer informations

--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -24,20 +24,11 @@
 		<div class="col-md-3 mb-md-0 mb-3">
   
 		  <!-- Links -->
-		  <h5 class="text-uppercase">Links</h5>
+		  <h5 class="text-uppercase">Project</h5>
   
 		  <ul class="list-unstyled">
 			<li>
-			  <a href="#!">Link 1</a>
-			</li>
-			<li>
-			  <a href="#!">Link 2</a>
-			</li>
-			<li>
-			  <a href="#!">Link 3</a>
-			</li>
-			<li>
-			  <a href="#!">Link 4</a>
+			  <a href="https://github.com/adrienmillot/holberton_portfolio">Github</a>
 			</li>
 		  </ul>
   
@@ -48,20 +39,17 @@
 		<div class="col-md-3 mb-md-0 mb-3">
   
 		  <!-- Links -->
-		  <h5 class="text-uppercase">Links</h5>
+		  <h5 class="text-uppercase">Contact us</h5>
   
 		  <ul class="list-unstyled">
 			<li>
-			  <a href="#!">Link 1</a>
+			  <a href="https://github.com/SimonBR017">Simon BRARD</a>
 			</li>
 			<li>
-			  <a href="#!">Link 2</a>
+			  <a href="https://github.com/Sarolus">Nathan LAPEYRE</a>
 			</li>
 			<li>
-			  <a href="#!">Link 3</a>
-			</li>
-			<li>
-			  <a href="#!">Link 4</a>
+			  <a href="https://github.com/adrienmillot">Adrien MILLOT</a>
 			</li>
 		  </ul>
   
