--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -65,6 +65,18 @@
 							<a class="dropdown-item" href="/users/create">Create User</a>
 						</div>
 					</li>
+
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+							Proposals
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" href="/proposals">List Proposals</a>
+							<a class="dropdown-item" href="/proposals/create">Create Proposal</a>
+						</div>
+					</li>
+
 				</ul>
 			</ul>
 		</div>
