--- a/web_flask/templates/profiles/profiles_list.html
+++ b/web_flask/templates/profiles/profiles_list.html
@@ -29,20 +29,11 @@
 
   {{ render_partial('shared/_header.html') }}
   <div class='container-fluid'>
-    <H1>Profiles</H1>
+    <h1 class="mb-5">Profiles<input class="btn btn-success btn-lg float-right" type="button" value="Create Profile"
+      onclick="window.location.href = '/profiles/create';"></h1>
     <div class="row justify-content-lg-start">
       <section class="alert_success_delete_survey"></section>
     </div>
-    <div class="container-fluid">
-      <div class="btn_link_to_create_survey">
-        <div class="row justify-content-lg-end">
-          <input class="btn btn-success btn-lg" type="button" value="Create Profile"
-            onclick="window.location.href = '/profiles/create';">
-        </div>
-      </div>
-    </div>
-    <h4>&nbsp;</h4>
-
     <table class="table table-hover table-dark">
       <thead>
         <tr>
@@ -57,7 +48,6 @@
       </tbody>
     </table>
   </div>
-  <h4>&nbsp;</h4>
   <div class='container-fluid'>
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-end">
@@ -73,7 +63,6 @@
       </ul>
     </nav>
   </div>
-  <h1>&nbsp;</h1>
   {{ render_partial('shared/_footer.html') }}
 </body>
 
