--- a/web_flask/templates/questions/questions_list.html
+++ b/web_flask/templates/questions/questions_list.html
@@ -27,20 +27,11 @@
   <body>
     {{ render_partial('shared/_header.html') }}
     <div class='container-fluid'>
-      <H1>Questions</H1>
+      <h1 class="mb-5">Questions<input class="btn btn-success btn-lg float-right" type="button" value="Create Question"
+        onclick="window.location.href = '/questions/create';"></h1>
       <div class="row justify-content-lg-start">
         <section class="alert_success_delete_question"></section>
       </div>
-      <div class="container-fluid">
-        <div class="btn_link_to_create_question">
-          <div class="row justify-content-lg-end">
-            <input class="btn btn-success btn-lg" type="button" value="Create Question"
-              onclick="window.location.href = '/questions/create';">
-          </div>
-        </div>
-      </div>
-      <h4>&nbsp;</h4>
-
       <table class="table table-hover table-dark">
         <thead>
           <tr>
@@ -54,9 +45,6 @@
         <tbody class="questions_list">
         </tbody>
       </table>
-    </div>
-    <h4>&nbsp;</h4>
-    <div class='container-md'>
       <nav aria-label="Page navigation example">
         <ul class="pagination justify-content-end">
           <li class="page-item disabled">
@@ -71,7 +59,6 @@
         </ul>
       </nav>
     </div>
-    <h1>&nbsp;</h1>
     {{ render_partial('shared/_footer.html') }}
   </body>
 </html>
