--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -24,11 +24,20 @@
 		<div class="col-md-3 mb-md-0 mb-3">
   
 		  <!-- Links -->
-		  <h5 class="text-uppercase">Project</h5>
+		  <h5 class="text-uppercase">Follow us on Github</h5>
   
 		  <ul class="list-unstyled">
 			<li>
-			  <a href="https://github.com/adrienmillot/holberton_portfolio">Github</a>
+			  <a href="https://github.com/adrienmillot/holberton_portfolio">Project</a>
+			</li>
+			<li>
+			  <a href="https://github.com/SimonBR017">Simon BRARD</a>
+			</li>
+			<li>
+			  <a href="https://github.com/Sarolus">Nathan LAPEYRE</a>
+			</li>
+			<li>
+			  <a href="https://github.com/adrienmillot">Adrien MILLOT</a>
 			</li>
 		  </ul>
   
@@ -43,13 +52,13 @@
   
 		  <ul class="list-unstyled">
 			<li>
-			  <a href="https://github.com/SimonBR017">Simon BRARD</a>
+			  <a href="mailto:@holbertonschool.com">Simon BRARD</a>
 			</li>
 			<li>
-			  <a href="https://github.com/Sarolus">Nathan LAPEYRE</a>
+			  <a href="mailto:2760@holbertonschool.com">Nathan LAPEYRE</a>
 			</li>
 			<li>
-			  <a href="https://github.com/adrienmillot">Adrien MILLOT</a>
+			  <a href="mailto:2701@holbertonschool.com">Adrien MILLOT</a>
 			</li>
 		  </ul>
   
