Update simon email

--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -52,7 +52,7 @@
   
 		  <ul class="list-unstyled">
 			<li>
-			  <a href="mailto:@holbertonschool.com">Simon BRARD</a>
+			  <a href="mailto:2835@holbertonschool.com">Simon BRARD</a>
 			</li>
 			<li>
 			  <a href="mailto:2760@holbertonschool.com">Nathan LAPEYRE</a>
