--- a/web_flask/templates/dashboard.html
+++ b/web_flask/templates/dashboard.html
@@ -5,12 +5,7 @@
 	<title>Survey Storm</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-
-
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
 	<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 		crossorigin="anonymous"></script> -->
@@ -21,22 +16,19 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-
 	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
-
 	<script type="text/javascript" src="../static/scripts/get_user_profile.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
-
   <link rel="icon" href="/favicon.ico" />
 </head>
 
 <body>
 	{{ render_partial('shared/_header.html') }}
-	<h1>Dashboard</h1>
-	<section class="infos"></section>
-
-
+  <div class="container-fluid">
+    <h1>Dashboard</h1>
+    <section class="infos"></section>
+  </div>
 	{{ render_partial('shared/_footer.html') }}
 
 
