Fix new password field hiding

--- a/web_flask/templates/users/user_edit.html
+++ b/web_flask/templates/users/user_edit.html
@@ -44,7 +44,7 @@
                 <div class="row justify-content-center">
                   <input class="form-control" type="text" placeholder="User name" name="txt_user_name"
                     id="txt_user_name" />
-                  <input class="form-control" type="text" placeholder="New password" name="txt_user_password"
+                  <input class="form-control" type="password" placeholder="New password" name="txt_user_password"
                     id="txt_user_password" />
                   <input type="hidden" name="user_id" value="1" />
                 </div>
