fix value for selector empty

--- a/web_flask/templates/profiles/profile_edit.html
+++ b/web_flask/templates/profiles/profile_edit.html
@@ -59,7 +59,7 @@
 			  <div class="form-group mr-3">
                 <div class="row justify-content-center">
                   <select class="custom-select" name="select_gender_for_profile_update" id="select_gender_for_profile_update">
-                    <option selected>Gender...</option>
+                    <option selected value="">Gender...</option>
 					<option value="Male">Male</option>
 					<option value="Female">Female</option>
 					<option value="Trans">Trans</option>
