--- a/web_flask/templates/proposals/proposal_create.html
+++ b/web_flask/templates/proposals/proposal_create.html
@@ -50,7 +50,7 @@
               <div class="form-group mr-3">
                 <div class="row justify-content-center">
                   <select class="custom-select" name="select_question_for_proposal" id="select_question_for_proposal">
-                    <option selected>Question...</option>
+                    <option selected value="">Question...</option>
 
                   </select>
                 </div>
