--- a/web_flask/templates/questions/question_create.html
+++ b/web_flask/templates/questions/question_create.html
@@ -50,7 +50,7 @@
               <div class="form-group mr-3">
                 <div class="row justify-content-center">
                   <select class="custom-select" name="select_category" id="select_category">
-                    <option selected>Category...</option>
+                    <option selected value="">Category...</option>
 
                   </select>
                 </div>
@@ -59,7 +59,7 @@
               <div class="form-group mr-3">
                 <div class="row justify-content-center">
                   <select class="custom-select" name="select_survey" id="select_survey">
-                    <option selected>Survey...</option>
+                    <option selected value="">Survey...</option>
                   </select>
                 </div>
               </div>
