--- a/web_flask/templates/users/user_create.html
+++ b/web_flask/templates/users/user_create.html
@@ -58,7 +58,7 @@
               <div class="form-group mr-3">
                 <div class="row justify-content-center">
                   <select class="custom-select" name="select_profile" id="select_profile">
-                    <option selected>Profile...</option>
+                    <option selected value="">Profile...</option>
 
                   </select>
                 </div>
