--- a/web_flask/static/styles/footer.css
+++ b/web_flask/static/styles/footer.css
@@ -8,7 +8,8 @@ footer {
 }
 
 body > footer h5 > img#logo {
-	width: 100px;
+	width: 75px;
+	height: 75px;
 }
 
 div.footer-copyright.text-center.py-3 {
