fix visual problem, add buton user menu, add api status check, add is valid true or folse to create proposal, fix success message deletment

--- a/web_flask/templates/categories/categories_list.html
+++ b/web_flask/templates/categories/categories_list.html
@@ -36,7 +36,7 @@
         <section class="alert_success_delete_category"></section>
       </div>
       <table class="table table-hover table-dark">
-        <thead>
+        <thead align="center">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Category's Name</th>
@@ -45,7 +45,7 @@
             <th scope="col">Watch Update Delete</th>
           </tr>
         </thead>
-        <tbody class="categories_list">
+        <tbody class="categories_list" align="center">
         </tbody>
       </table>
       <nav aria-label="Page navigation example">
