--- a/web_flask/templates/profiles/profiles_list.html
+++ b/web_flask/templates/profiles/profiles_list.html
@@ -35,7 +35,7 @@
       <section class="alert_success_delete_profile"></section>
     </div>
     <table class="table table-hover table-dark">
-      <thead>
+      <thead align="center"> 
         <tr>
           <th scope="col">#</th>
           <th scope="col">First Name</th>
@@ -44,7 +44,7 @@
           <th scope="col">Watch Update Delete</th>
         </tr>
       </thead>
-      <tbody class="profiles_list">
+      <tbody class="profiles_list" align="center">
       </tbody>
     </table>
   </div>
