--- a/web_flask/templates/proposals/proposals_list.html
+++ b/web_flask/templates/proposals/proposals_list.html
@@ -35,7 +35,7 @@
       <section class="alert_success_delete_proposal"></section>
     </div>
     <table class="table table-hover table-dark">
-      <thead>
+      <thead align="center">
         <tr>
           <th scope="col">#</th>
           <th scope="col">Proposal's Label</th>
@@ -44,7 +44,7 @@
           <th scope="col">Watch Update Delete</th>
         </tr>
       </thead>
-      <tbody class="proposals_list">
+      <tbody class="proposals_list" align="center">
       </tbody>
     </table>
     <nav aria-label="Page navigation example">
