--- a/web_flask/templates/questions/questions_list.html
+++ b/web_flask/templates/questions/questions_list.html
@@ -33,7 +33,7 @@
         <section class="alert_success_delete_question"></section>
       </div>
       <table class="table table-hover table-dark">
-        <thead>
+        <thead align="center">
           <tr>
             <th scope="col">#</th>
             <th scope="col">Question's Label</th>
@@ -42,7 +42,7 @@
             <th scope="col">Watch Update Delete</th>
           </tr>
         </thead>
-        <tbody class="questions_list">
+        <tbody class="questions_list" align="center">
         </tbody>
       </table>
       <nav aria-label="Page navigation example">
