--- a/web_flask/templates/surveys/surveys_list.html
+++ b/web_flask/templates/surveys/surveys_list.html
@@ -35,16 +35,15 @@
       <section class="alert_success_delete_survey"></section>
     </div>
     <table class="table table-hover table-dark">
-      <thead>
+      <thead align="center">
         <tr>
           <th scope="col">#</th>
           <th scope="col">Survey's Name</th>
           <th scope="col">Survey's Id</th>
-          <th scope="col"></th>
           <th scope="col">Watch Update Delete</th>
         </tr>
       </thead>
-      <tbody class="surveys_list">
+      <tbody class="surveys_list" align="center">
       </tbody>
     </table>
     <nav aria-label="Page navigation example">
