--- a/web_flask/templates/users/users_list.html
+++ b/web_flask/templates/users/users_list.html
@@ -36,7 +36,7 @@
 		</div>
 
 		<table class="table table-hover table-dark">
-			<thead>
+			<thead align="center">
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Username</th>
@@ -45,7 +45,7 @@
 					<th scope="col">Watch Update Delete</th>
 				</tr>
 			</thead>
-			<tbody class="users_list">
+			<tbody class="users_list" align="center">
 			</tbody>
 		</table>
 		<nav aria-label="Page navigation example">
