--- a/web_flask/templates/proposals/proposal_create.html
+++ b/web_flask/templates/proposals/proposal_create.html
@@ -55,7 +55,8 @@
                   </select>
                 </div>
               </div>
-
+			  <h6> <input class="checkbox_is_valid" type="checkbox" name="checkbox_is_valid" id="checkbox_is_valide"/>   It's a valid proposal</h6>
+			  
 
               <div class="container-sm">
                 <div class="form-group mr-3">
@@ -65,6 +66,7 @@
                   </div>
                 </div>
               </div>
+			 
             </form>
           </div>
         </div>
