--- a/web_flask/templates/login.html
+++ b/web_flask/templates/login.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
 
+	<script type="text/javascript" src="../static/scripts/event/API_status.js"></script>
 
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
