--- a/web_flask/templates/questions/questions_list.html
+++ b/web_flask/templates/questions/questions_list.html
@@ -29,7 +29,7 @@
     <div class='container-fluid'>
       <h1 class="mb-5">Questions<input class="btn btn-success btn-lg float-right" type="button" value="Create Question"
         onclick="window.location.href = '/questions/create';"></h1>
-      <div class="row justify-content-lg-start">
+      <div class="row justify-content-between">
         <section class="alert_success_delete_question"></section>
       </div>
       <table class="table table-hover table-dark">
