--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -42,16 +42,16 @@
 
 				<ul class="list-unstyled">
 					<li>
-						<a href="https://github.com/adrienmillot/holberton_portfolio">Project</a>
+						<a href="https://github.com/adrienmillot/holberton_portfolio" target="_blank">Project</a>
 					</li>
 					<li>
-						<a href="https://github.com/SimonBR017">Simon BRARD</a>
+						<a href="https://github.com/SimonBR017" target="_blank">Simon BRARD</a>
 					</li>
 					<li>
-						<a href="https://github.com/Sarolus">Nathan LAPEYRE</a>
+						<a href="https://github.com/Sarolus" target="_blank">Nathan LAPEYRE</a>
 					</li>
 					<li>
-						<a href="https://github.com/adrienmillot">Adrien MILLOT</a>
+						<a href="https://github.com/adrienmillot" target="_blank">Adrien MILLOT</a>
 					</li>
 				</ul>
 
@@ -86,7 +86,7 @@
 	<!-- Footer Links -->
 
 	<!-- Copyright -->
-	<div class="footer-copyright text-center py-3">© 2020 Copyright:
+	<div class="footer-copyright text-center py-3">© 2021 Copyright:
 		<a href="/">Survey Storm</a>
 	</div>
 	<!-- Copyright -->
