api and web update

--- a/web_flask/templates/answer.html
+++ b/web_flask/templates/answer.html
@@ -39,41 +39,18 @@
 				<div class="card shadow-sm mt-5 bg-light rounded">
 					<div class="card-body">
 						<h5 class="card-title">Question #1</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text" id="question_to_answer"></p>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<div class="container-fluid">
-			<div class="row mt-5">
-				<div class="col-sm-5">
-					<p class="proposal_1"><input class="checkbox_answer" type="checkbox" name="checkbox_1"
-							id="checkbox_1" />
-						With supporting text below as a natural lead-in to additional content.</p>
-				</div>
-
-				<div class="col-sm-5">
-					<p class="proposal_2"><input class="checkbox_answer" type="checkbox" name="checkbox_2"
-							id="checkbox_2" />
-						With supporting text below as a natural lead-in to additional content.</p>
-				</div>
-			</div>
-
-			<div class="row mt-5">
-				<div class="col-sm-5">
-					<p class="proposal_3"><input class="checkbox_answer" type="checkbox" name="checkbox_3"
-							id="checkbox_3" />
-						With supporting text below as a natural lead-in to additional content.</p>
-				</div>
-
-				<div class="col-sm-5">
-					<p class="proposal_4"><input class="checkbox_answer" type="checkbox" name="checkbox_4"
-							id="checkbox_4" />
-						With supporting text below as a natural lead-in to additional content.</p>
-				</div>
-			</div>
+		<div class="container-fluid proposal">
+			<form action="" class="form-horizontal" id="form_proposal_answer" method="post">
+				
+			</form>
 		</div>
+
 		<div class="row mt-5 justify-content-center">
 			<input class="btn btn-warning btn-lg" type="button" value="Answer" name="btn_validate_answer"
 				id="btn_validate_answer">
