Fix footer Add landing page Add about page

--- a/web_flask/templates/answer.html
+++ b/web_flask/templates/answer.html
@@ -30,7 +30,7 @@
 <body>
 	{{ render_partial('shared/_header.html') }}
 
-	<div class="container-fluid text-center text-md-left">
+	<div class="container-fluid text-center text-md-left pt-5">
 
 		<h3>{{ survey_name }}</h3>
 
