--- a/web_flask/templates/login.html
+++ b/web_flask/templates/login.html
@@ -26,12 +26,13 @@
 	<script type="text/javascript" src="../static/scripts/login.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
+	<link rel="stylesheet" type="text/css" href="../static/styles/common.css">
 
 </head>
 
 <body>
 	{{ render_partial('shared/_header.html') }}
-	<div class="wrapper fadeInDown">
+	<div class="container-fluid pt-5">
 		<div id="formContent">
 
 			<!-- Login Form -->
