--- a/web_flask/templates/shared/_footer.html
+++ b/web_flask/templates/shared/_footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small blue pt-4 fixed-bottom">
+<footer class="page-footer font-small blue pt-4">
 
 	<!-- Footer Links -->
 	<div class="container-fluid text-center text-md-left">
@@ -35,7 +35,7 @@
 			<hr class="clearfix w-100 d-md-none pb-3">
 
 			<!-- Grid column -->
-			<div class="col-md-3 mb-md-0 mb-3">
+			<div class="col-md-2 mb-md-0 mb-2">
 
 				<!-- Links -->
 				<h5 class="text-uppercase">Follow us on Github</h5>
@@ -59,7 +59,7 @@
 			<!-- Grid column -->
 
 			<!-- Grid column -->
-			<div class="col-md-3 mb-md-0 mb-3">
+			<div class="col-md-2 mb-md-0 mb-2">
 
 				<!-- Links -->
 				<h5 class="text-uppercase">Contact us</h5>
@@ -73,6 +73,27 @@
 					</li>
 					<li>
 						<a href="mailto:2701@holbertonschool.com">Adrien MILLOT</a>
+					</li>
+				</ul>
+
+			</div>
+			<!-- Grid column -->
+
+			<!-- Grid column -->
+			<div class="col-md-2 mb-md-0 mb-2">
+
+				<!-- Links -->
+				<h5 class="text-uppercase">About the project</h5>
+
+				<ul class="list-unstyled">
+					<li>
+						<a href="/about">About</a>
+					</li>
+					<li>
+						<a href="#"></a>
+					</li>
+					<li>
+						<a href="#"></a>
 					</li>
 				</ul>
 
