--- a/web_flask/templates/shared/_navbar.html
+++ b/web_flask/templates/shared/_navbar.html
@@ -1,4 +1,4 @@
-<div class="shadow-sm mb-5 bg-white rounded">
+<div class="shadow-sm bg-white rounded">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/">
 			<img src="/logo.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">urvey
