--- a/web_flask/templates/surveys/survey_edit.html
+++ b/web_flask/templates/surveys/survey_edit.html
@@ -27,7 +27,7 @@
 
   <body>
     {{ render_partial('shared/_header.html') }}
-    <div class='container-sm'>
+    <div class='container-sm pt-5'>
   
       <h1>Edit Survey</h1>
       <h1>&nbsp;</h1>
