--- a/web_flask/templates/categories/category_create.html
+++ b/web_flask/templates/categories/category_create.html
@@ -26,7 +26,7 @@
 
   <body>
     {{ render_partial('shared/_header.html') }}
-    <div class='container-fluid'>
+    <div class='container-fluid pt-5'>
 
       <h1>Create Category</h1>
       <h1>&nbsp;</h1>
