--- a/web_flask/templates/dashboard.html
+++ b/web_flask/templates/dashboard.html
@@ -30,7 +30,7 @@
 <body>
 	{{ render_partial('shared/_header.html') }}
 
-	<div class="container-fluid text-center text-md-left">
+	<div class="container-fluid text-center text-md-left pt-5">
 		<h1>Dashboard</h1>
 
 		<div class="row mt-5" style="height: 9cm;">
