--- a/web_flask/templates/homepage.html
+++ b/web_flask/templates/homepage.html
@@ -2,38 +2,76 @@
 <html lang="en">
 
 <head>
-	<title>Survey Storm</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Survey Storm</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-		integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-		crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
-	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/common.css">
+  <link rel="stylesheet" type="text/css" href="../static/styles/homepage.css">
 
-	<script type="text/javascript" src="../static/scripts/event/API_status.js"></script>
-	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
-	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
+  <script type="text/javascript" src="../static/scripts/event/API_status.js"></script>
+  <script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
+  <script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
 
   <link rel="icon" href="/favicon.ico" />
 
 </head>
 
 <body>
-	{{ render_partial('shared/_header.html') }}
+  {{ render_partial('shared/_header.html') }}
 
-	<div class="d-flex justify-content-center">
-		<H1>Index Page</H1>
-	</div>
+  <div class="container-fluid p-0">
+    <div id="carousel" class="position-relative overflow-hidden p-3 p-md-5 text-center bg-light">
+      <div class="col-md-5 p-lg-5 mx-auto my-5">
+        <h1 class="display-4 font-weight-normal">A new way to analyze your answers!</h1>
+        <p class="lead font-weight-normal">With Survey Storm, you could easily organize your different surveys and produce graph to represent results of them.</p>
+        <a class="btn btn-outline-secondary mt-4" href="#">Coming soon</a>
+      </div>
+      <div class="product-device box-shadow d-none d-md-block"></div>
+      <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+    </div>
 
-	{{ render_partial('shared/_footer.html') }}
+    <section class="mt-5 mb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-5 text-right">
+            <h2>Your data. Our intelligence.</h2>
+            <p>We help you to represent what your data are looking for.</p>
+          </div>
+          <div class="col-7 text-center">
+            <img src="https://www.drupal.org/files/project-images/bars.png" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mt-5 mb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-7 text-center">
+            <img src="https://www.techrepublic.com/a/hub/i/r/2014/02/24/cd309b4b-16ea-446c-869c-1fbc6aba43f3/thumbnail/770x578/447cdf4ed1d87aa7bc8d360c825e4a7a/privacy_istock_022414.jpg" />
+          </div>
+          <div class="col-5 text-left">
+            <h2>Because your privacy are our priority.</h2>
+            <p></p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  {{ render_partial('shared/_footer.html') }}
 </body>
 
 </html>
