--- a/web_flask/templates/profiles/profile_show.html
+++ b/web_flask/templates/profiles/profile_show.html
@@ -28,7 +28,7 @@
   <body>
     {{ render_partial('shared/_header.html') }}
     
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
       <h1></h1>
     </div>
 
