--- a/web_flask/templates/profiles/profiles_list.html
+++ b/web_flask/templates/profiles/profiles_list.html
@@ -28,8 +28,8 @@
 <body>
 
   {{ render_partial('shared/_header.html') }}
-  <div class='container-fluid'>
-    <h1 class="mb-5">Profiles<input class="btn btn-success btn-lg float-right" type="button" value="Create Profile"
+  <div class='container-fluid pt-5'>
+    <h1>Profiles<input class="btn btn-success btn-lg float-right" type="button" value="Create Profile"
       onclick="window.location.href = '/profiles/create';"></h1>
     <div class="row justify-content-lg-start">
       <section class="alert_success_delete_profile"></section>
@@ -47,8 +47,6 @@
       <tbody class="profiles_list" align="center">
       </tbody>
     </table>
-  </div>
-  <div class='container-fluid'>
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-end">
         <li class="page-item disabled">
