--- a/web_flask/templates/proposals/proposals_list.html
+++ b/web_flask/templates/proposals/proposals_list.html
@@ -28,7 +28,7 @@
 <body>
 
   {{ render_partial('shared/_header.html') }}
-  <div class='container-fluid'>
+  <div class='container-fluid pt-5'>
     <h1 class="mb-5">Proposals<input class="btn btn-success btn-lg float-right" type="button" value="Create Proposal"
       onclick="window.location.href = '/proposals/create';"></h1>
     <div class="row justify-content-lg-start">
