--- a/web_flask/templates/questions/question_create.html
+++ b/web_flask/templates/questions/question_create.html
@@ -27,7 +27,7 @@
 
   <body>
     {{ render_partial('shared/_header.html') }}
-    <div class='container-fluid'>
+    <div class='container-fluid pt-5'>
 
       <h1>Create Question</h1>
       <h1>&nbsp;</h1>
