--- a/web_flask/templates/questions/questions_list.html
+++ b/web_flask/templates/questions/questions_list.html
@@ -26,7 +26,7 @@
 
   <body>
     {{ render_partial('shared/_header.html') }}
-    <div class='container-fluid'>
+    <div class='container-fluid pt-5'>
       <h1 class="mb-5">Questions<input class="btn btn-success btn-lg float-right" type="button" value="Create Question"
         onclick="window.location.href = '/questions/create';"></h1>
       <div class="row justify-content-between">
