--- a/web_flask/templates/surveys/survey_create.html
+++ b/web_flask/templates/surveys/survey_create.html
@@ -25,9 +25,9 @@
 	<link rel="icon" href="/favicon.ico" />
 </head>
 
-<body>
-	{{ render_partial('shared/_header.html') }}
-	<div class='container-fluid'>
+  <body>
+    {{ render_partial('shared/_header.html') }}
+    <div class='container-fluid pt-5'>
 
 		<h1>Create Survey</h1>
 		<h1>&nbsp;</h1>
