--- a/web_flask/templates/users/users_list.html
+++ b/web_flask/templates/users/users_list.html
@@ -41,7 +41,7 @@
 				<tr>
 					<th scope="col">#</th>
 					<th scope="col">Username</th>
-					<th scope="col">User id</th>
+					<th scope="col">User Role</th>
 					<th scope="col"></th>
 					<th scope="col">Watch Update Delete</th>
 				</tr>
