--- a/web_flask/templates/dashboard.html
+++ b/web_flask/templates/dashboard.html
@@ -38,7 +38,7 @@
 				<div class="card">
 					<div class="card-body" style="height: 8cm;">
 						<h5 class="card-title">Profile</h5>
-						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<p class="card-text"> </p>
 						<section class="infos_user"></section>
 					</div>
 				</div>
