update all show event

--- a/web_flask/templates/surveys/survey_edit.html
+++ b/web_flask/templates/surveys/survey_edit.html
@@ -18,16 +18,16 @@
 	<script type="text/javascript" src="../../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../../static/scripts/event/login_btn.js"></script>
 
-	<script type="text/javascript" src="../../static/scripts/survey_edit.js"></script>
+	<script type="text/javascript" src="../../static/scripts/event/survey_edit.js"></script>
 
 
     {% assets "styles_all" %}
     <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
     {% endassets %}
-
+<!-- 
     {% assets "js_all" %}
     <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
+    {% endassets %} -->
 
     <link rel="icon" href="/favicon.ico" />
   </head>
