--- a/web_flask/templates/surveys/survey_show.html
+++ b/web_flask/templates/surveys/survey_show.html
@@ -24,10 +24,10 @@
     {% assets "styles_all" %}
       <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
     {% endassets %}
-
+<!-- 
     {% assets "js_all" %}
       <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
+    {% endassets %} -->
 
     <link rel="icon" href="/favicon.ico" />
   </head>
