--- a/web_flask/templates/categories/category_show.html
+++ b/web_flask/templates/categories/category_show.html
@@ -17,6 +17,10 @@
 	<script type="text/javascript" src="../../static/scripts/event/API_status.js"></script>
 	<script type="text/javascript" src="../../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../../static/scripts/event/login_btn.js"></script>
+	<script type="text/javascript" src="../../static/scripts/event/verify_page.js"></script>
+	<script type="text/javascript" src="../../static/scripts/event/menu_user.js"></script>
+
+
 
 	<script type="text/javascript" src="../../static/scripts/event/category_show.js"></script>
 
