--- a/web_flask/templates/answer.html
+++ b/web_flask/templates/answer.html
@@ -19,6 +19,8 @@
 	<script type="text/javascript" src="../../../static/scripts/event/API_status.js"></script>
 	<script type="text/javascript" src="../../../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../../../static/scripts/event/login_btn.js"></script>
+	<script type="text/javascript" src="../../../static/scripts/event/menu_user.js"></script>
+
 
 	<script type="text/javascript" src="../../../static/scripts/answer.js"></script>
 
