--- a/web_flask/templates/login.html
+++ b/web_flask/templates/login.html
@@ -24,6 +24,8 @@
 	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
 	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
 	<script type="text/javascript" src="../static/scripts/login.js"></script>
+	<script type="text/javascript" src="../static/scripts/event/menu_user.js"></script>
+
 
 	<link rel="stylesheet" type="text/css" href="../static/styles/footer.css">
 	<link rel="stylesheet" type="text/css" href="../static/styles/common.css">
