--- a/web_flask/templates/profiles/profiles_list.html
+++ b/web_flask/templates/profiles/profiles_list.html
@@ -14,9 +14,13 @@
 		crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 
-	<script type="text/javascript" src="/static/scripts/event/API_status.js"></script>
-	<script type="text/javascript" src="static/scripts/event/log_out.js"></script>
-	<script type="text/javascript" src="static/scripts/event/login_btn.js"></script>
+	<script type="text/javascript" src="../static/scripts/event/API_status.js"></script>
+	<script type="text/javascript" src="../static/scripts/event/log_out.js"></script>
+	<script type="text/javascript" src="../static/scripts/event/login_btn.js"></script>
+	<script type="text/javascript" src="../static/scripts/event/verify_page.js"></script>
+	<script type="text/javascript" src="../static/scripts/event/menu_user.js"></script>
+
+
 
 	<script type="text/javascript" src="../static/scripts/profiles_list.js"></script>
 
