update count question in answer

--- a/web_flask/templates/answer.html
+++ b/web_flask/templates/answer.html
@@ -42,12 +42,13 @@
 	<div class="container-fluid text-center text-md-left pt-5">
 
 		<h3>{{ survey_name }}</h3>
+		<p class="progress_bar" id="progress_bar"></p>
 
 		<div class="row mt-5 mb-5">
 			<div class="col-sm">
 				<div class="card shadow-sm mt-5 bg-light rounded">
 					<div class="card-body">
-						<h5 class="card-title">Question #1</h5>
+						<h5 class="card-title" id="count">Question #1</h5>
 						<p class="card-text" id="question_to_answer"></p>
 					</div>
 				</div>
